# chalk

./: README.md  example.py  pyproject.toml
chalk/: __init__.py  color_codes.py  colors.py  config.py  control_sequences.py  conversions.py  term.py  types.py
tests/: conftest.py  test_chalk.py
